[package]
name = "aopodcast"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Lorenzo Carbonell <lorenzo.carbonell.cerezo@gmail.com>"]
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.22", features = ["full", "time"] }

# reqwest
reqwest = { version = "0.11", features = ["json", "rustls-tls"]}

# Templates
tera = "1.17"

# Yaml
serde_yaml = "0.9"

# log
log = "0.4"
simplelog = "0.11"

# Utility
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
regex = "1"
html-escape = "0.2"
html2md = "0.2"
