[package]
name = "aopodcast"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Lorenzo Carbonell <lorenzo.carbonell.cerezo@gmail.com>"]
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.22", features = ["full", "time"] }
async-recursion = "1.0"

# reqwest
reqwest = { version = "0.11", features = ["json"] }
openssl = { version = "0.10", features = ["vendored"] }

# Templates
tera = { version = "1.17", features = ["builtins"] }

# Yaml
serde_yaml = "0.9"
# front matter
gray_matter = 0.2

# log
log = "0.4"
simplelog = "0.11"

# Utility
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
regex = "1"
html-escape = "0.2"
chrono = "0.4"

# Markdown
html2md = "0.2"
comrak = "0.15"
