[package]
name = "aopodcast"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Lorenzo Carbonell <lorenzo.carbonell.cerezo@gmail.com>"]
rust-version = "1.74"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24", features = ["full", "time"] }
async-recursion = "1.0"

# reqwest
reqwest = { version = "0.11", features = ["json"] }
openssl = { version = "0.10", features = ["vendored"] }

# Templates
once_cell = "1.18.0"
minijinja = { version = "1.0.9", features = ["loader"] }

# Yaml
serde_yaml = "0.9"
# front matter
gray_matter = "0.2"

# log
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["local-time", "env-filter"] }

# Utility
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
regex = "1"
html-escape = "0.2"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"

# Markdown
html2md = "0.2"
comrak = "0.17"

[dev-dependencies]
dotenv = "0.15"
